--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
   z-index: 99
   }
   </style>
-<script src='dist/deepScatter.js'></script>
-<script src='http://d3js.org/d3-v5.min.js'></script>
-<div id="canvas" style="position:fixed;top:0;left:0">
-
-</div>
+<script src='deepScatter.js'></script>
+<script src='https://d3js.org/d3.v5.min.js'></script>
+<div id="deepscatter" style="position:fixed;top:0;left:0">
+  <canvas id="canvas"></canvas>
+  <canvas style="position:fixed;background:white;top:0;left:0" id="letters"></canvas>
+  </div>
 
 <header>Wow this is ugly!</header>
 
 Yeah, this library depends on bootstrap css to actually look OK.
 
 <script>
-  
-var scatterplot = deepScatter.default("#canvas", window.innerWidth * 0.8, window.innerHeight * 0.8)
+  d3.select("#canvas").attr("width", window.innerWidth).attr("height", window.innerHeight)
+  scatterplot = new deepScatter.default({selector: "#deepscatter", source_url: "build"})
 
 scatterplot.plotAPI({
-  "base_dir": "tiles",
+  "base_dir": "build",
   "colors": {"language":"","Classification":"","Subclassification":"","date":"","Principal Author":""},
   "labels": ["Classification", "Subclassification","id","title","date","Principal Author", "language", "library"],
   "point_size": 2,
@@ -37,7 +38,6 @@ scatterplot.plotAPI({
   "label_field": "title",
   "scheme": "light",
   "guides": ["legend", "color_legend", "label_legend", "filter_legend"]
-
   }
 )
 
