multiple rendering channels for when needed

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   <div>
 </div>
 
-<div id="deepscatter" style="position:fixed;top:0;left:0">
-  <canvas id="canvas"></canvas>
-  <canvas style="position:fixed;background:white;top:0;left:0" id="letters"></canvas>
+  <div id="deepscatter" style="position:fixed;top:0;left:0">
+    
 </div>
 
 <header>Wow this is ugly!</header>
@@ -30,11 +29,11 @@ Yeah, this library depends on bootstrap css to actually look OK.
   scatterplot = new deepScatter.default({selector: "#deepscatter", source_url: "build"})
   scatterplot.initialize()
   scatterplot.plotAPI({
-   point_size: 1.5,
+   point_size: 2.5,
    max_points: 30000,
    label_threshold: .01,
-   label_field: "title",
-   color_field: "lc1",
-   color_domain: [100000, 0]
+   label_field: "lc1",
+   color_field: "record_date",
+   color_domain: [1800, 2000]
   })
 </script>
