--- a/index.html
+++ b/index.html
@@ -29,27 +29,31 @@ Yeah, this library depends on bootstrap css to actually look OK.
   scatterplot = new deepScatter.default({selector: "#deepscatter", source_url: "build"})
   scatterplot.initialize()
   scatterplot.plotAPI({
-   point_size: 1.5,
-   max_points: 30000,
-   label_threshold: .005,
-   label_field: "word",
-   color_field: "goodness",
-   color_domain: [-.5, .5]
+   point_size: 0.5,
+   max_points: 1000000,
+   label_threshold: .0,
+   label_field: "metro",
+   color_field: "yearday",
+   color_domain: [30, 120],
+   filters: [
+    "return datum.yearday < 180"
+   ]
   })
 
   keyaction = function(val) {
     // This search function simply looks at every point and zooms
     // to them if it matches the string.
     const text = val.value
-    for (let p of scatterplot._root.points()) {
-      if (p.word === text) {
-        scatterplot._zoom.zoom_to(30, p.x, p.y, 8000)
-        break
-      }
-    }
+    scatterplot.plotAPI({
+      filters: [
+        text
+      ]
+    })
   }
 </script>
 
-<input type="text" style="position:fixed" width=20 onkeyup="keyaction(this)">
+<input type="text" style="position:fixed"
+value="return datum.yearday < 80" size=60
+onkeyup="keyaction(this)">
 
 </input>
