--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
 <style>
   .ttooltip: {
   z-index: 99
@@ -26,18 +21,21 @@ Nurk!
 
 <script>
 
-  scatterplot = new deepScatter.default({selector: "#deepscatter", source_url: "build"})
+  scatterplot = new deepScatter.default(
+  {selector: "#deepscatter", source_url: "build"})
   scatterplot.initialize()
   scatterplot.plotAPI({
-   point_size: 1.3,
+   point_size: 0.8,
    max_points: 1000000,
    label_threshold: .0,
    label_field: "yearday",
    color_field: "yearday",
    color_domain: [60, 110],
+   basemap_geojson: "earth.topojson",
    filters: [
     "return datum.yearday <= 188"
-   ]
+  ],
+  jitter: "spiral"
   })
 
   keyaction = function(val) {
