--- a/index_prod.html
+++ b/index_prod.html
@@ -12,18 +12,19 @@
   <pre id="ident" style="z-index:99;position:fixed;"></pre>
 
 </body>
+<script src="https://d3js.org/d3.v7.min.js"></script>
 
-
-<script type="module">
-  import Scatterplot from './src/deepscatter.js';
-  import { select } from 'd3-selection';
+<script type = "module">
+  import Scatterplot from './dist/deepscatter.es.js';
+  const select = d3.select
+//  import { select } from 'd3-selection';
   window.select = select; // For the click function below.
   const prefs = {
-    "source_url" : "//localhost:3000/tiles",
-    "max_points" : 10000, // a full cap.
-    "alpha" : .9, // Target saturation for the full page.
+    "source_url" : "/dist/tiles",
+    "max_points" : 25000, // a full cap.
+    "alpha" : .7, // Target saturation for the full page.
     "zoom_balance" : 0.09, // Rate at which points increase size. https://observablehq.com/@bmschmidt/zoom-strategies-for-huge-scatterplots-with-three-js
-    "point_size": 7, // Default point size before application of size scaling
+    "point_size": 10, // Default point size before application of size scaling
     "background_color": "#EEEDDE",
     "click_function": "select('#ident').html(JSON.stringify(datum, undefined, 2))",
     "encoding": {
@@ -64,9 +65,9 @@
     }
   ]
 
-  const scatterplot = new Scatterplot("#deepscatter")
-  scatterplot.plotAPI(prefs);
-  window.plot = scatterplot; // For debugging
+  const plot = new Scatterplot("#deepscatter")
+  plot.plotAPI(prefs);
+  window.plot = plot; // For debugging
 
 
   // Simple animation demonstration.
@@ -83,7 +84,7 @@
       }
     }
     console.log(new_coding)
-    scatterplot.plotAPI(new_coding)
+    plot.plotAPI(new_coding)
   })
 
 </script>
