SVG circle colors match scales

--- a/index_prod.html
+++ b/index_prod.html
@@ -20,7 +20,7 @@
 //  import { select } from 'd3-selection';
   window.select = select; // For the click function below.
   const prefs = {
-    "source_url" : "/dist/tiles",
+    "source_url" : "/tiles/vietnam_war",
     "max_points" : 25000, // a full cap.
     "alpha" : .7, // Target saturation for the full page.
     "zoom_balance" : 0.09, // Rate at which points increase size. https://observablehq.com/@bmschmidt/zoom-strategies-for-huge-scatterplots-with-three-js
