--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   import { select } from 'd3-selection';
   window.select = select; // For the click function below.
   const prefs = {
-    "source_url" : "//localhost:3000/tiles",
+    "source_url" : "tiles",
     "max_points" : 10000, // a full cap.
     "alpha" : .9, // Target saturation for the full page.
     "zoom_balance" : 0.09, // Rate at which points increase size. https://observablehq.com/@bmschmidt/zoom-strategies-for-huge-scatterplots-with-three-js
