--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
 
 <body>
   <h1>Welcome to a demo/test page.</h1>
-  <div id="deepscatter" style="position:fixed;top:0;left:0">
+  <div id="deepscatter">
   </div>
   <button id="flip" style="z-index:99;position:fixed;">Change encoding</button>
   <pre id="ident" style="z-index:99;position:fixed;"></pre>
 
 </body>
+
+<head>
+  <style>
+      dt {
+          float: left;
+          clear: left;
+          width: 90px;
+          font-weight: bold;
+          color: rgb(128, 19, 0);
+      }
+
+      dt::after {
+          content: ":";
+      }
+
+      dd {
+          margin: 0 0 0 80px;
+          padding: 0 0 0.5em 0;
+          width: 180px;
+      }
+  </style>
+</head>
 
 
 <script type="module">
