--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   import { select } from 'd3-selection';
   window.select = select; // For the click function below.
   const prefs = {
-    "source_url" : "tiles",
+    "source_url" : "/tiles",
     "max_points" : 10000, // a full cap.
     "alpha" : .9, // Target saturation for the full page.
     "zoom_balance" : 0.09, // Rate at which points increase size. https://observablehq.com/@bmschmidt/zoom-strategies-for-huge-scatterplots-with-three-js
@@ -99,7 +99,7 @@
   const scatterplot = new Scatterplot("#deepscatter")
   scatterplot.plotAPI(prefs).then(d => scatterplot.plotAPI(prefs));
   window.plot = scatterplot; // For debugging
-
+  console.log(scatterplot.database)
   // Simple animation demonstration.
 
   let cycle = 0;
