Support direct passing of Arrow Table, with example at clifford.html

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 
 <body>
   <h1>Welcome to a demo/test page.</h1>
-  <div id="deepscatter">
-  </div>
+  <div id="deepscatter"></div>
   <div id="controls" style="z-index:99;position:fixed;">
   <input type="range" min=0 max=.5 step=.01 id="jitter" value=.05 />
   <button id="flip">Change encoding</button>
-
   <button id="html">Change tooltip HTML</button>
   <pre id="ident"></pre>
   </div>
