scuffed way of injecting _isSelected

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   const colors = [
 //    JSON.parse(JSON.stringify(prefs.encoding.color)),
     {
-      "field": "isSelected",
-      "range": ['#ff0000','#00ff00'],
+      "field": "_isSelected",
+      "range": ['#ffffff','#000000'],
       "domain": ids,
     },
     {
