support for unicode ids

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
   const colors = [
 //    JSON.parse(JSON.stringify(prefs.encoding.color)),
     {
-      "field": "isSelected",
+      "field": "_isSelected",
       "range": ['#000000','#ffffff'],
       "domain": ids_1,
     },
     {
-      "field": "isSelected",
+      "field": "_isSelected",
       "range": ['#000000','#ffffff'],
       "domain": ids_2,
     },
