--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
       "domain": ids_1,
     },
     {
-      "field": "_isSelected",
-      "range": ['#000000','#ffffff'],
-      "domain": ids_2,
+      "field": 'quantity',
+      "range": 'viridis',
+      "domain": 'progressive',
     },
   ]
 
