--- a/index-simplest-way-to-start.html
+++ b/index-simplest-way-to-start.html
@@ -15,7 +15,7 @@
   import Scatterplot from "./src/deepscatter";
 
   const prefs = {
-    source_url: "/tiles",
+    source_url: "/tiles", // the output of the quadfeather tiling engine
     max_points: 1000000, // a full cap.
     alpha: 5, // Target saturation for the full page.
     zoom_balance: 0.7, // Rate at which points increase size. https://observablehq.com/@bmschmidt/zoom-strategies-for-huge-scatterplots-with-three-js
@@ -23,7 +23,7 @@
     background_color: "#000000",
     click_function: "console.log(JSON.stringify(datum, undefined, 2))",
 
-    // encoding API based off of Vega Lite: https://vega.github.io/vega-lite/docs/encoding.html
+    // encoding API based roughly on Vega Lite: https://vega.github.io/vega-lite/docs/encoding.html
     encoding: {
       x: {
         field: "x",
@@ -33,10 +33,8 @@
         field: "y",
         transform: "literal",
       },
-      // This is just to demo an encoding a color field, likely you wouldn't need to doubly encode x!
       color: {
-        field: "x",
-        range: "PuRd", // "Purple to red", anything from d3-scale-chromatic works
+        constant: "#00ff00",
       },
     },
   };
