--- a/index-simplest-way-to-start.html
+++ b/index-simplest-way-to-start.html
@@ -12,33 +12,33 @@
 </body>
 
 <script type="module">
-  import Scatterplot from "./src/deepscatter";
+  import Scatterplot from './src/deepscatter';
 
   const prefs = {
-    source_url: "/tiles", // the output of the quadfeather tiling engine
+    source_url: '/tiles', // the output of the quadfeather tiling engine
     max_points: 1000000, // a full cap.
     alpha: 5, // Target saturation for the full page.
     zoom_balance: 0.7, // Rate at which points increase size. https://observablehq.com/@bmschmidt/zoom-strategies-for-huge-scatterplots-with-three-js
     point_size: 16, // Default point size before application of size scaling
-    background_color: "#000000",
-    click_function: "console.log(JSON.stringify(datum, undefined, 2))",
+    background_color: '#000000',
+    click_function: 'console.log(JSON.stringify(datum, undefined, 2))',
 
     // encoding API based roughly on Vega Lite: https://vega.github.io/vega-lite/docs/encoding.html
     encoding: {
       x: {
-        field: "x",
-        transform: "literal",
+        field: 'x',
+        transform: 'literal',
       },
       y: {
-        field: "y",
-        transform: "literal",
+        field: 'y',
+        transform: 'literal',
       },
       color: {
-        constant: "#00ff00",
+        constant: '#00ff00',
       },
     },
   };
 
-  const scatterplot = new Scatterplot("#deepscatter");
+  const scatterplot = new Scatterplot('#deepscatter');
   scatterplot.plotAPI(prefs);
 </script>
